--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 </head>
 <body>
     <div id="nickname-container">
-        <input type="text" id="nickname" placeholder="Enter your nickname">
-        <button id="play">Play</button>
+        <div class="centered">
+            <input type="text" id="nickname" placeholder="Enter your nickname">
+            <button id="play">Play</button>
+        </div>
     </div>
     <div id="canvas-container" style="display: none;">
         <canvas id="drawing-canvas"></canvas>
