--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <div id="nickname-container">
-        <div class="centered">
-            <input type="text" id="nickname" placeholder="Enter your nickname">
-            <button id="play">Play</button>
-        </div>
+    <div id="nickname-container" class="centered">
+        <input type="text" id="nickname" placeholder="Enter your nickname">
+        <button id="play">Play</button>
     </div>
     <div id="canvas-container" style="display: none;">
         <canvas id="drawing-canvas"></canvas>
