--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
         <input type="text" id="nickname" placeholder="Enter your nickname">
         <button id="play">Play</button>
     </div>
-    <div id="canvas-container" style="display: none;">
+    <div id="canvas-container">
         <canvas id="drawing-canvas"></canvas>
+    </div>
+    <div id="chat-container" class="chat">
+        <!-- Chat content goes here -->
+    </div>
+    <div id="player-list-container" class="player-list">
+        <!-- Player list content goes here -->
     </div>
     <div id="drawing-toolbar">
         <button id="clear">Clear</button>
