--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
         <input type="text" id="nickname" placeholder="Enter your nickname">
         <button id="play">Play</button>
     </div>
-    <div id="canvas-container">
+    <div id="canvas-container" class="canvas-container">
         <canvas id="drawing-canvas"></canvas>
     </div>
-    <div id="chat-container" class="chat">
+    <div id="chat-container" class="chat-container chat">
         <!-- Chat content goes here -->
     </div>
-    <div id="player-list-container" class="player-list">
+    <div id="player-list-container" class="player-list-container player-list">
         <!-- Player list content goes here -->
     </div>
     <div id="drawing-toolbar">
