--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
         <canvas id="drawing-canvas"></canvas>
     </div>
     <div id="chat-container" class="chat-container chat">
-        <div id="chat-messages"></div>
-        <input type="text" id="message-input" placeholder="Type your message" disabled>
-        <button id="send-message" disabled>Send</button>
+        <div id="chat-messages" class="chat-messages"></div>
+        <div class="message-input-container">
+            <input type="text" id="message-input" placeholder="Type your message" disabled>
+            <button id="send-message" disabled>Send</button>
+        </div>
     </div>
     <div id="player-list-container" class="player-list-container player-list">
         <h3>Player List</h3>
