--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <div id="nickname-container" class="centered">
+    <div id="background" class="background"></div>
+    <div id="nickname-container" class="nickname-container">
         <h2>Enter your nickname</h2>
         <input type="text" id="nickname" placeholder="Nickname">
         <button id="play">Play</button>
