--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <div id="nickname-container" class="centered-top">
-        <h2>Enter your nickname</h2>
-        <input type="text" id="nickname" placeholder="Nickname">
-        <button id="play">Play</button>
+    <div id="container" class="centered">
+        <div id="nickname-container">
+            <h2>Enter your nickname</h2>
+            <input type="text" id="nickname" placeholder="Nickname">
+            <button id="play">Play</button>
+        </div>
     </div>
     <div id="canvas-container" class="canvas-container">
         <canvas id="drawing-canvas"></canvas>
