--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </div>
     </div>
     <div id="canvas-container" class="canvas-container">
-        <canvas id="drawing-canvas"></canvas>
+        <canvas id="drawing-canvas" width="2000" height="2000"></canvas>
     </div>
     <div id="chat-container" class="chat-container chat">
         <div id="chat-messages" class="chat-messages"></div>
