--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="chat-container" class="chat-container chat">
         <div id="chat-messages" class="chat-messages"></div>
         <div class="message-input-container">
-            <input type="text" id="message-input" placeholder="Type your message" disabled>
+            <input type="text" id "message-input" placeholder="Type your message" disabled>
             <button id="send-message" disabled>Send</button>
         </div>
     </div>
