--- a/index.html
+++ b/index.html
@@ -1,36 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div id="container" class="centered">
-        <div id="nickname-container">
-            <h2>Enter your nickname</h2>
-            <input type="text" id="nickname" placeholder="Nickname">
-            <button id="play">Play</button>
-        </div>
+    <div id="login">
+        <h1>Snake Game</h1>
+        <input type="text" id="nickname" placeholder="Enter your nickname">
+        <button onclick="joinLobby()">Join Lobby</button>
     </div>
-    <div id="canvas-container" class="canvas-container">
-        <canvas id="drawing-canvas" width="1920" height="1080"></canvas>
+
+    <div id="lobby" class="hidden">
+        <h2>Lobby</h2>
+        <p id="lobby-message">Waiting for players...</p>
+        <button id="start-button" onclick="startGame()" disabled>Start</button>
     </div>
-    <div id="chat-container" class="chat-container chat">
-        <div id="chat-messages" class="chat-messages"></div>
-        <div class="message-input-container">
-            <input type="text" id="message-input" placeholder="Type your message" disabled>
-            <button id="send-message" disabled>Send</button>
-        </div>
+
+    <div id="game" class="hidden">
+        <!-- Snake game canvas goes here -->
     </div>
-    <div id="player-list-container" class="player-list-container player-list">
-        <h3>Player List</h3>
-        <ul id="player-list"></ul>
-    </div>
-    <div id="drawing-toolbar" class="drawing-toolbar">
-        <button id="clear">Clear</button>
-        <button id="eraser" disabled>Eraser</button>
-        <button id="pencil" disabled>Pencil</button>
-        <input type="color" id="color" disabled>
-    </div>
+
+    <script src="game.js"></script>
 </body>
-<script src="script.js"></script>
 </html>
