--- a/index.html
+++ b/index.html
@@ -3,17 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Multiplayer Snake Game</title>
+    <title>Snake Game</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="game-container">
-        <!-- The game board will go here -->
+    <div id="loginContainer">
+        <h2>Enter Your Nickname</h2>
+        <input type="text" id="nickname" />
+        <button onclick="startGame()">Login</button>
     </div>
-    <div id="lobby">
-        <input type="text" id="nickname" placeholder="Enter your nickname">
-        <button id="join-lobby">Join Lobby</button>
+
+    <div id="lobbyContainer" style="display:none;">
+        <h2>Waiting for game to start...</h2>
+        <div id="countdown">10</div>
     </div>
+
+    <div id="gameContainer" style="display:none;">
+        <div id="score">Score: 0</div>
+        <canvas id="gameCanvas" width="400" height="400"></canvas>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
