--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <div class="game-container">
         <div id="snake" class="snake"></div>
         <div id="food" class="food"></div>
+        <div id="score">Score: 0</div>
     </div>
     <script src="script.js"></script>
 </body>
