--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>TEST</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Maze Game</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="game-container">
-        <div id="snake" class="snake"></div>
-        <div id="food" class="food"></div>
-        <div id="score">Score: 0</div>
-    </div>
+    <div id="maze"></div>
     <script src="script.js"></script>
 </body>
 </html>
