--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="maze"></div>
+    <div id="maze" class="maze"></div>
     <script src="script.js"></script>
 </body>
 </html>
