--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maze Game</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div id="maze" class="maze"></div>
+<html>
+  <head>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+  </head>
+  <body>
+    <div class="maze" id="maze"></div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
