--- a/index.html
+++ b/index.html
@@ -1,21 +1,12 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
-  </head>
-  <body>
-    <div class="maze-container">
-      <div class="controls">
-        <button id="smallMaze">Small Maze</button>
-        <button id="mediumMaze">Medium Maze</button>
-        <button id="largeMaze">Large Maze</button>
-      </div>
-      <div class="maze" id="maze"></div>
-      <div class="counters">
-        <div class="counter">Time: <span id="timer">0</span> seconds</div>
-        <div class="counter">Steps: <span id="steps">0</span></div>
-      </div>
-    </div>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Color Switcher</title>
+</head>
+<body>
     <script src="script.js"></script>
-  </body>
+</body>
 </html>
